# CLI

./: .gitignore  BUILD_CODE_MEMORY.md  CMakeLists.txt  README.md
include/: cmd_parser.h  storage.h  string_utils.h  todo_item.h  todo_manager.h
src/: cmd_parser.cpp  main.cpp  parser.cpp  storage.cpp  string_utils.cpp  todo_item.cpp  todo_manager.cpp
